Data base works and get list pet and create pet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ProjetAndroid</string>
+    <string name="empty_view_title_text">empty_view_title_text</string>
+    <string name="empty_view_subtitle_text">empty_view_subtitle_text</string>
 </resources>
