Pet CRUD works except for get pets detail and update pet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">ProjetAndroid</string>
     <string name="empty_view_title_text">empty_view_title_text</string>
     <string name="empty_view_subtitle_text">empty_view_subtitle_text</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
